--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -768,5 +768,6 @@
   "dn16:4.1.1": "A ujutru se Blaženi obuče, uze svoju prosjačku zdelu i gornji ogrtač, pa krenu put Vesālija da prosi hranu.",
   "dn16:4.1.2": "Kad je prošao Vesāli i vraćao se iz prošenja hrane, posle obroka, okrenu se on ka Vesāliju „slonovskim pogledom”, pa reče:",
   "dn16:4.1.3": "„Ānanda, ovo je poslednji pogled Tathāgate na Vesāli.",
-  "dn16:4.1.4": "Hajde, Ānanda, otići ćemo do Bhaṇde.”"
+  "dn16:4.1.4": "Hajde, Ānanda, otići ćemo do Bhaṇde.”",
+  "dn16:4.1.5": "„Da, poštovani gospodine,” odgovori Ānanda."
 }
