--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -771,5 +771,6 @@
   "dn16:4.1.4": "Hajde, Ānanda, otići ćemo do Bhaṇde.”",
   "dn16:4.1.5": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:4.2.1": "Onda Tathāgata, praćen velikom grupom monaha, stiže u Bhaṇdu.",
-  "dn16:4.2.2": "Dok je tu boravio, "
+  "dn16:4.2.2": "Dok je tu boravio, ",
+  "dn16:4.2.3": "reče on monasima:"
 }
