--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -773,5 +773,6 @@
   "dn16:4.2.1": "Onda Tathāgata, praćen velikom grupom monaha, stiže u Bhaṇdu.",
   "dn16:4.2.2": "Dok je tu boravio, ",
   "dn16:4.2.3": "reče on monasima:",
-  "dn16:4.2.4": "„Monasi, zato što nismo razumeli, nismo pronicali u četiri stvari, i ja i vi smo dugo putovali ovim krugom preporađanja."
+  "dn16:4.2.4": "„Monasi, zato što nismo razumeli, nismo pronicali u četiri stvari, i ja i vi smo dugo putovali ovim krugom preporađanja.",
+  "dn16:4.2.5": "A koje četiri?"
 }
