--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -775,5 +775,5 @@
   "dn16:4.2.3": "reče on monasima:",
   "dn16:4.2.4": "„Monasi, zato što nismo razumeli, nismo pronicali u četiri stvari, i ja i vi smo dugo putovali ovim krugom preporađanja.",
   "dn16:4.2.5": "A koje četiri?",
-  "dn16:4.2.6": "Zato što nismo razumeli, nismo pronicali u plemenitu vrlinu, plemenitu koncentraciju, plemenitu mudrost i plemenito oslobođenje, i ja i vi smo dugo putovali ovim krugom preporađanja."
+  "dn16:4.2.6": "Zato što nismo razumeli, nismo pronicali u plemenitu vrlinu, i ja i vi smo dugo putovali ovim krugom preporađanja."
 }
