--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -778,5 +778,6 @@
   "dn16:4.2.6": "Zato što nismo razumeli, nismo proniknuli u plemenitu vrlinu, i vi i ja smo dugo putovali ovim krugom preporađanja.",
   "dn16:4.2.7": "Zato što nismo razumeli, nismo proniknuli u plemenitu koncentraciju, i vi i ja smo dugo putovali ovim krugom preporađanja.",
   "dn16:4.2.8": "Zato što nismo razumeli, nismo proniknuli u plemenitu mudrost, i vi i ja smo dugo putovali ovim krugom preporađanja.",
-  "dn16:4.2.9": "Zato što nismo razumeli, nismo proniknuli u plemenito oslobođenje, i vi i ja smo dugo putovali ovim krugom preporađanja."
+  "dn16:4.2.9": "Zato što nismo razumeli, nismo proniknuli u plemenito oslobođenje, i vi i ja smo dugo putovali ovim krugom preporađanja.",
+  "dn16:4.2.10": "Ali sada je, monasi, shvaćena, sada je proniknuta plemenita vrlina, plemenita koncentracija, plemenita mudrost i plemenito oslobođenje. Razorena je žudnja za večnim postojanjem, uništeno ono što vodi ka preporađanju, nema više novih života.”"
 }
