--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -783,5 +783,6 @@
   "dn16:4.3.1": "Tako reče Blaženi.",
   "dn16:4.3.2": "A zatim i ovo dodade učitelj:",
   "dn16:4.3.3": "„Vrlina, koncentracija, mudrost",
-  "dn16:4.3.4": "i najviše oslobođenje."
+  "dn16:4.3.4": "i najviše oslobođenje.",
+  "dn16:4.3.5": "Sve te stvari"
 }
