--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -786,5 +786,6 @@
   "dn16:4.3.4": "i najviše oslobođenje.",
   "dn16:4.3.5": "Sve te stvari",
   "dn16:4.3.6": "razumeo je glasoviti Gotama.",
-  "dn16:4.3.7": "Tako Buda, razumevši je potpuno,"
+  "dn16:4.3.7": "Tako Buda, razumevši je potpuno,",
+  "dn16:4.3.8": "objavi Dhammu monasima."
 }
