--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -789,5 +789,6 @@
   "dn16:4.3.7": "Tako Buda, razumevši je potpuno,",
   "dn16:4.3.8": "objavi Dhammu monasima.",
   "dn16:4.3.9": "Učitelj što zaustavlja patlju,",
-  "dn16:4.3.10": "onaj što jasno vidi, slobodan postade."
+  "dn16:4.3.10": "onaj što jasno vidi, slobodan postade.",
+  "dn16:4.4.1": "Dok je živeo kraj Bhaṇde, Blaženi je često govorio monasima o Dhammi:"
 }
