--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -796,5 +796,6 @@
   "dn16:4.4.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
   "dn16:4.4.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:4.4.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
-  "dn16:4.5.0": "22. Četiri velika izvora učenja"
+  "dn16:4.5.0": "22. Četiri velika izvora učenja",
+  "dn16:4.5.1": "Kada je ostao kraj Bhaṇde koliko je želeo, Blaženi reče poštovanom Ānandi:"
 }
