--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -797,5 +797,6 @@
   "dn16:4.4.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:4.4.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:4.5.0": "22. Četiri velika izvora učenja",
-  "dn16:4.5.1": "Kada je ostao kraj Bhaṇde koliko je želeo, Blaženi reče poštovanom Ānandi:"
+  "dn16:4.5.1": "Kada je ostao kraj Bhaṇde koliko je želeo, Blaženi reče poštovanom Ānandi:",
+  "dn16:4.5.2": "„Hajde, Ānanda, idemo do Hatthigāme,"
 }
