--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -3,5 +3,6 @@
   "iti103:2.2": "nessuno di questi contemplativi o bramini, o considerati contemplativi tra i contemplativi, o considerati bramini tra i bramini, di questi venerabili ha raggiunto il fine ultimo della vita contemplativa o dell’essere un bramino, ovvero nella liberazione attraverso la saggezza acquisita direttamente in questa vita con la conoscenza superiore** ",
   "iti103:3.1": "Ma invece chiunque conosca.... ",
   "iti103:3.2": ".. ",
-  "iti103:4.1": "Chi non conosce il Dukkha, "
+  "iti103:4.1": "Chi non conosce il Dukkha, ",
+  "iti103:4.2": "l’origine del dukkha, "
 }
