--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti103:3.2": ".. ",
   "iti103:4.1": "Chi non conosce il Dukkha, ",
   "iti103:4.2": "l’origine del dukkha, ",
-  "iti103:4.3": "dove/quando ovunque dukkha "
+  "iti103:4.3": "dove/quando ovunque dukkha ",
+  "iti103:4.4": "completo è finito "
 }
