--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti103:3.2": ".. ",
   "iti103:4.1": "Chi non conosce il Dukkha, ",
   "iti103:4.2": "l’origine del dukkha, ",
-  "iti103:4.3": "dove/quando ovunque dukkha ",
+  "iti103:4.3": "quando il dukkha in ogni modo ",
   "iti103:4.4": "completo è finito ",
   "iti103:4.5": "non conoscono quel percorso ",
   "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** "
