--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -7,6 +7,6 @@
   "iti103:4.2": "l’origine del dukkha, ",
   "iti103:4.3": "quando il dukkha in ogni modo ",
   "iti103:4.4": "è completamente terminato, ",
-  "iti103:4.5": "non conoscono quel percorso ",
+  "iti103:4.5": "e non conoscono quel percorso ",
   "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** "
 }
