--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti103:4.3": "quando il dukkha in ogni modo ",
   "iti103:4.4": "è completamente terminato, ",
   "iti103:4.5": "e non conoscono quel percorso ",
-  "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** "
+  "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** ",
+  "iti103:5.1": "Senza la liberazione del cuore "
 }
