--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -9,5 +9,6 @@
   "iti103:4.4": "è completamente terminato, ",
   "iti103:4.5": "e non conoscono quel percorso ",
   "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** ",
-  "iti103:5.1": "Senza la liberazione del cuore "
+  "iti103:5.1": "Senza la liberazione del cuore ",
+  "iti103:5.2": "e la liberazione attraverso la sapienza "
 }
