--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti103:4.6": "che conduce alla pacificazione della sofferenza. ** ",
   "iti103:5.1": "Senza la liberazione del cuore ",
   "iti103:5.2": "e la liberazione attraverso la sapienza ",
-  "iti103:5.3": "sono incapaci di portare a termine "
+  "iti103:5.3": "sono incapaci di portare a termine ",
+  "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. "
 }
