--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -13,5 +13,6 @@
   "iti103:5.2": "e la liberazione attraverso la sapienza ",
   "iti103:5.3": "sono incapaci di portare a termine ",
   "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
-  "iti103:6.1": "Quello che conoscono il dukkha "
+  "iti103:6.1": "Quello che conoscono il dukkha ",
+  "iti103:6.2": "l’origine del dukkha, "
 }
