--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -20,5 +20,6 @@
   "iti103:6.5": "e conoscono quel percorso * ",
   "iti103:6.6": "che conduce alla pacificazione della sofferenza. * ",
   "iti103:7.1": "con la perfetta liberazione del cuore * ",
-  "iti103:7.2": "e la liberazione attraverso la sapienza * "
+  "iti103:7.2": "e la liberazione attraverso la sapienza * ",
+  "iti103:7.3": "sono capaci (in grado) di portare a termine "
 }
