--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -1,3 +1,3 @@
 {
-  "iti104:2.1": "Qualsiasi cercatore dalla perfetta moralità, samādhi, sapienza, liberazione, conoscenza e visione della liberazione, che è un oratore, istruttore, maestro, che esorta/incoraggia, ispira, delizia, insegnante competente del buon Dhamma visione?, io vi dico che è di grande aiuto per voi. "
+  "iti104:2.1": "Qualsiasi cercatore dalla perfetta moralità, samādhi, sapienza, liberazione, conoscenza e visione della liberazione, che è un oratore, istruttore, maestro, che esorta/incoraggia, ispira, delizia, insegnante competente del buon Dhamma, io vi dico che vedere quel cercatore è di grande aiuto per voi. "
 }
