--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -209,7 +209,7 @@
   "mn60:33.2": "Sie sagen: ",
   "mn60:33.3": "‚Es gibt ein vollständiges Aufhören des fortgesetzten Daseins.‘ ",
   "mn60:33.4": "Was denkt ihr, Hausbesitzer? ",
-  "mn60:33.5": "Widersprachen diese Doktrinen einander nicht diametral?“ ",
+  "mn60:33.5": "Widersprechen diese Doktrinen einander nicht diametral?“ ",
   "mn60:33.6": "„Ja, Herr.“ ",
   "mn60:34.1": "Ein vernünftiger Mensch denkt darüber nach: ",
   "mn60:34.2": "‚Manche Asketen und Brahmanen sagen, ",
