--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "mn60:10.5": "Weil diese Asketen und Brahmanen die nachteiligen Folgen untauglicher Eigenschaften sehen, die so schmutzig und unlauter sind, und die vorteilhaften Folgen tauglicher Eigenschaften, die läuternde Kraft der Entsagung. ",
   "mn60:11.1": "Und da es jene Welt tatsächlich gibt, ist darüber hinaus ihre Ansicht, es gebe jene Welt, rechte Ansicht. ",
   "mn60:11.2": "Da es jene Welt tatsächlich gibt, ist ihr Denken, es gebe jene Welt, rechtes Denken. ",
-  "mn60:11.3": "Und da es jene Welt tatsächlich gibt, ist ihre Rede, es gebe jene Welt, rechte Rede. ",
+  "mn60:11.3": "Da es jene Welt tatsächlich gibt, ist ihre Rede, es gebe jene Welt, rechte Rede. ",
   "mn60:11.4": "Da es jene Welt tatsächlich gibt, widersprechen sie, wenn sie sagen, es gebe jene Welt, nicht jenen Vollendeten, die jene Welt kennen. ",
   "mn60:11.5": "Da es jene Welt tatsächlich gibt, überzeugen sie jemand anderen, wenn sie ihn davon überzeugen, es gebe jene Welt, davon, eine wahre Lehre anzunehmen. ",
   "mn60:11.6": "Und sie verherrlichen sich deshalb nicht selbst, noch setzen sie andere herab. ",
