--- a/translation/de/sabbamitta/sutta/sn/sn42/sn42.13_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn42/sn42.13_translation-de-sabbamitta.json
@@ -177,7 +177,7 @@
   "sn42.13:25.3": "‚Dieser Lehrer, der diese Doktrin, diese Ansicht hatte: ",
   "sn42.13:25.4": "„Der Täter tut nichts Schlechtes, wenn er bestraft, verstümmelt, foltert, kränkt, unterdrückt oder einschüchtert oder wenn er andere zu diesen Dingen anstiftet. Er tut nichts Schlechtes, wenn er tötet, stiehlt, in Häuser einbricht, Vermögen plündert, aus abgelegenen Gebäuden stiehlt, Landstraßen unsicher macht, Ehebruch begeht und lügt. ",
   "sn42.13:25.5": "Wenn man alle lebenden Geschöpfe auf dieser Erde mit einem rasiermesserscharfen Chakram in einen einzigen Fleischhaufen, eine einzige Fleischmasse verwandeln würde, würde daraus nichts Böses entstehen und auch keine Auswirkung von Bösem. ",
-  "sn42.13:25.6": "Wenn man am südlichen Ufer des Ganges entlangginge und töten, verstümmeln und foltern würde und andere anstiften würde, dasselbe zu tun, würde daraus nichts Böses entstehen und auch keine Auswirkung von Bösem. ",
+  "sn42.13:25.6": "Wenn man am südlichen Ufer des Ganges entlangginge und töten, verstümmeln und foltern würde und andere anstiften würde, das Gleiche zu tun, würde daraus nichts Böses entstehen und auch keine Auswirkung von Bösem. ",
   "sn42.13:25.7": "Wenn man am nördlichen Ufer des Ganges entlangginge und spenden und opfern würde und andere ermuntern würde, das Gleiche zu tun, würde daraus kein Verdienst entstehen und auch keine Auswirkung von Verdienst. ",
   "sn42.13:25.8": "In Geben, Selbstbeherrschung, Zügelung und Wahrhaftigkeit liegt kein Verdienst und auch keine Auswirkung von Verdienst“ – ",
   "sn42.13:25.9": "wenn das wahr ist, was dieser gute Lehrer sagt, ist es eine unfehlbare Wette, wenn ich kein Geschöpf verletze, kräftig oder zart. ",
