--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -48,5 +48,6 @@
   "mn4:16.4": "Je suis énergique... › ",
   "mn4:17.2": "‹ Il y a des ascètes et des brahmanes distraits et dépourvu d’attention… ",
   "mn4:17.4": "Je suis attentif… › ",
-  "mn4:18.2": "‹ Il y a des ascètes et des brahmanes qui manquent de méditation profonde, avec des esprits égarés… "
+  "mn4:18.2": "‹ Il y a des ascètes et des brahmanes qui manquent de méditation profonde, avec des esprits égarés… ",
+  "mn4:18.4": "Je suis accompli en méditation profonde… › "
 }
