--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -52,5 +52,6 @@
   "mn4:18.4": "Je suis accompli en méditation profonde… › ",
   "mn4:19.2": "‹ Il y a des ascètes et des brahmanes qui sont de peu de sagesse et obtus, qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts d’être peu avisé et obtus, commettent des actions nuisibles, effrayantes et dangereuses. ",
   "mn4:19.3": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts avec peu de sagesse et obtus. ",
-  "mn4:19.4": "Je suis accompli en sagesse. "
+  "mn4:19.4": "Je suis accompli en sagesse. ",
+  "mn4:19.5": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts, accomplis en sagesse. › "
 }
