--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -53,5 +53,6 @@
   "mn4:19.2": "‹ Il y a des ascètes et des brahmanes qui sont de peu de sagesse et obtus, qui se retirent dans des lieux isolés dans les régions sauvages et les forêts. Ces ascètes et brahmanes, en raison des défauts d’être peu avisé et obtus, commettent des actions nuisibles, effrayantes et dangereuses. ",
   "mn4:19.3": "Mais je ne me retire pas dans des lieux isolés dans les régions sauvages et les forêts avec peu de sagesse et obtus. ",
   "mn4:19.4": "Je suis accompli en sagesse. ",
-  "mn4:19.5": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts, accomplis en sagesse. › "
+  "mn4:19.5": "Je suis l’un de ces nobles qui se retirent dans des lieux isolés dans les régions sauvages et les forêts, accomplis en sagesse. › ",
+  "mn4:19.6": "Conscient de cet accomplissement en sagesse chez moi, je me sentais encore plus serein à l’idée de rester dans la forêt. "
 }
