--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti112:3.2": "che si chiama Buddha. ",
   "iti112:4.1": "Poiché nella notte in cui il Buddha ha realizzato la perfetta suprema illuminazione, e si è completamento emancipato con lo stato del Nibbāna senza carburante/combustibile residuo, in questa occasione ha recitato, dichiarato e indicato tutto esattamente com’è, e non altrimenti, ",
   "iti112:4.2": "che si chiama Buddha. ",
-  "iti112:5.1": "Il Buddha parla così, agisce così, parla e agisce così "
+  "iti112:5.1": "Il Buddha parla così, agisce così, parla e agisce così ",
+  "iti112:5.2": "come parla così agisce, e come agisce così parla ???? "
 }
