--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -13,5 +13,6 @@
   "iti112:4.2": "che si chiama Buddha. ",
   "iti112:5.1": "Il Buddha parla così, agisce così, parla e agisce così ",
   "iti112:5.2": "come parla così agisce, e come agisce così parla ???? ",
-  "iti112:5.3": "x "
+  "iti112:5.3": "x ",
+  "iti112:6.2": "x "
 }
