--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "mn82:7.10": "Zum zweiten ",
   "mn82:7.11": "und zum dritten Mal bat Raṭṭhapāla seine Eltern um Erlaubnis und erhielt jeweils die gleiche Antwort. ",
   "mn82:7.20": "Da dachte Raṭṭhapāla: ",
-  "mn82:7.21": "„Meine Eltern erlauben mir nicht, fortzuziehen.“ Er legte sich eben da auf den blanken Boden und sagte: "
+  "mn82:7.21": "„Meine Eltern erlauben mir nicht, fortzuziehen.“ Er legte sich eben da auf den blanken Boden und sagte: ",
+  "mn82:7.22": "„Entweder sterbe ich eben hier oder ich ziehe fort.“ "
 }
