--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "mn82:7.21": "„Meine Eltern erlauben mir nicht, fortzuziehen.“ Er legte sich eben da auf den blanken Boden und sagte: ",
   "mn82:7.22": "„Entweder sterbe ich eben hier oder ich ziehe fort.“ ",
   "mn82:7.23": "Und er verweigerte das Essen bis hin zur siebten Mahlzeit. ",
-  "mn82:8.1": "Da sagten Raṭṭhapālas Eltern zu ihm: "
+  "mn82:8.1": "Da sagten Raṭṭhapālas Eltern zu ihm: ",
+  "mn82:8.2": "„Lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. "
 }
