--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "mn82:7.23": "Und er verweigerte das Essen bis hin zur siebten Mahlzeit. ",
   "mn82:8.1": "Da sagten Raṭṭhapālas Eltern zu ihm: ",
   "mn82:8.2": "„Lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
-  "mn82:8.3": "Du weißt nichts vom Leiden. "
+  "mn82:8.3": "Du weißt nichts vom Leiden. ",
+  "mn82:8.4": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. "
 }
