--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "mn82:7.6": "„Aber lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
   "mn82:7.7": "Du weißt nichts vom Leiden. ",
   "mn82:7.8": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
-  "mn82:7.9": "Wie können wir dir daher erlauben, aus dem Haus fortzuziehen ins hauslose Leben, solange du noch lebst?“ ",
+  "mn82:7.9": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
   "mn82:7.10": "Zum zweiten ",
   "mn82:7.11": "und zum dritten Mal bat Raṭṭhapāla seine Eltern um Erlaubnis und erhielt jeweils die gleiche Antwort. ",
   "mn82:7.20": "Da dachte Raṭṭhapāla: ",
